--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <script src="https://pl28463774.effectivegatecpm.com/1e/a3/e5/1ea3e5bd4cf52fccf27d8768c582422e.js"></script>
   <meta name="google-adsense-account" content="ca-pub-9633759634674797">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
